2010-12-19 Roman
- FIX:UI.Vision, UI.WebVision: For checkable buttons of primitive "FormEl" event ws_BtPress set for denting and ws_BtRelease set for other.


2010-12-17 Roman
- FIX:UI.Vision: Event ws_BtPress and ws_BtRelease generation is disabled for checkable buttons of primitive "FormEl".


2010-12-16 Roman
- SYS: Unaligned access function TSYS::getUnalignInt() is added.
- !!:FIX:SYS.TVariant, DAQ.AMRDevs, DAQ.OPC_UA: Unaligned access is fixed for ARM.
- DAQ.BFN: Alarms naming is some changed.
- DAQ.JavaLikeCalc: The VM commands CFunc, CFunc and CFuncObj is rewrited for structured access.


2010-12-15 Roman
- SYS: Functions TVal::time(), TVal::len(), TVal::dec(), TVal::flg(), TVal::def(), TVal::values(), 
    TVal::selNames() and TVal::reserve() is added to user's API.
    Functions TController::name(), TController::descr() and TController::status() is added to user's API.
- SYS: Result for TVarObj::propGet() for miss properties is return to NULL.
- !!!:DAQ.JavaLikeCalc: Buildin function typeof() is added for value type detect.


2010-12-14 Roman
- SYS: Function TVal::descr() is added to user's API.
- FIX:SYS: Result for TVarObj::propGet() for miss properties is set to EVAL_BOOL.
- FIX:DAQ.BFN: Call task termination is made easy by check for cntr.endrun_req into cycles.
- FIX:DAQ.JavaLikeCalc: Some messages is fixed.
- !!!:FIX:Archive.FSArch: The archive files creation for messages is fixed and rewrited for more old messages place support.
    The option "Prevent duples" is added for prevent storing duples messages.
- FIX:UI.Vision: Warning generate is fixed for empty documents of primitive "Document".
- FIX:Archive: The user's API function messGet() is fixed for crash.


2010-12-12 Roman
- FIX:DAQ.Siemens: NoDave is fixed for structures pack from all header space. #pragma pack(1) is replaced by #pragma pack(push,1) ... #pragma pack(pop).
    The problem is detected on ARM.


2010-12-10 Roman